5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1595_1015.log
== TEST (2019-03-26 16:14:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(int(4,5,9)
-- ERROR:
File "XXXX", line 5
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:14:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(int(min(4,5,9)))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:14:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(int(min(4,5,9)))
-- EXECUTION TIME:
0.139965
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:14:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(int(min(4,5,9)))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:15:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(int(min(4,5,9)))
print(int(max(4,5,9)))
-- OUTPUT:
4
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:15:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(int(min(4,5,9)))
print(int(max(4,5,9)))
-- EXECUTION TIME:
0.135762
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
4
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:15:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(int(min(4,5,9)))
print(int(max(4,5,9)))
-- OUTPUT:
4
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:15:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(int(min(4,5,9)))
print(int(max(4,5,9)))
-- EXECUTION TIME:
0.139753
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
4
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:15:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(int(input(min(4,5,9))))
print(int(input(max(4,5,9))))
-- OUTPUT:
410
9-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:15:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(int(input(min(4,5,9))))
print(int(input(max(4,5,9))))
-- EXECUTION TIME:
0.215324
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
410
9-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:16:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(int(input(min(4,5,9))))
print(int(input(max(4,5,9))))
-- OUTPUT:
410
9-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:16:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(int(input(min(4,5,9))))
print(int(input(max(4,5,9))))
-- OUTPUT:
410
9-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:17:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
valor= print(int(min(4,5,9)))
print(int(max(4,5,9)))
print(valor)
-- OUTPUT:
4
9
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:18:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(input(int(min(4,5,9))))
print(input(int(max(4,5,9))))

-- OUTPUT:
410
9-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:18:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(input(int(min(4,5,9))))
print(input(int(max(4,5,9))))

-- EXECUTION TIME:
0.187495
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
410
9-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:18:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))

-- EXECUTION TIME:
0.170016
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
210
6-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:19:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))

-- OUTPUT:
210
6-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:20:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(2+4+6)

-- OUTPUT:
210
6-2
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:21:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
valor=print(2+4+6)
print(valor)

-- EXECUTION TIME:
0.182532
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
210
6-2
12
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:21:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
valor=print(2+4+6)
print(valor)

-- OUTPUT:
210
6-2
12
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:21:57) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
valor=print(2+4+6)
print(valor)
-- OUTPUT:
210
6-2
12
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:21:59) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
valor=print(2+4+6)
print(valor)
-- EXECUTION TIME:
0.282362
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
210
6-2
12
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:22:23) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(2+4+6)

-- OUTPUT:
210
6-2
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:22:27) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(2+4+6)
-- OUTPUT:
210
6-2
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:22:35) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(2+4+6)
-- EXECUTION TIME:
0.167081
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
210
6-2
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:22:44) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(4)
-- EXECUTION TIME:
0.146664
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
210
6-2
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:22:45) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(4)
-- OUTPUT:
210
6-2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:55) 
-- CODE:
var1 = print(input(int(min(2,4,6))))
var2 = print(input(int(max(2,4,6))))
print(var1+var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var1+var2)
TypeError: unsupported operand type(s) for +: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:50:58) 
-- CODE:
var1 = print(input(int(min(2,4,6))))
var2 = print(input(int(max(2,4,6))))
print(var1+var2)
-- EXECUTION TIME:
0.213253
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1015/main.py", line 3, in <module>
    print(var1+var2)
TypeError: unsupported operand type(s) for +: 'NoneType' and 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:50) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(var1+var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var1+var2)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:57) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(var1+var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var1+var2)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:52:12) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(4)
-- EXECUTION TIME:
0.130903
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
210
6-2
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:53:44) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(2+4+6)-(6)-(2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(2+4+6)-(6)-(2)
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:53:46) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(2+4+6)-(6)-(2)
-- EXECUTION TIME:
0.171369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1015/main.py", line 3, in <module>
    print(2+4+6)-(6)-(2)
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:54:26) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(var= (2+4+6)-(6)-(2))
print(var)
-- EXECUTION TIME:
0.212098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1015/main.py", line 3, in <module>
    print(var= (2+4+6)-(6)-(2))
TypeError: 'var' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:54:27) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(var= (2+4+6)-(6)-(2))
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var= (2+4+6)-(6)-(2))
TypeError: 'var' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:54:40) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
print(var= (2+4+6)-(6)-(2))
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var= (2+4+6)-(6)-(2))
TypeError: 'var' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:54:56) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
var= (2+4+6)-(6)-(2)
print(var)
-- OUTPUT:
210
6-2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:54:59) 
-- CODE:
print(input(int(min(2,4,6))))
print(input(int(max(2,4,6))))
var= (2+4+6)-(6)-(2)
print(var)
-- EXECUTION TIME:
0.203342
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
210
6-2
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:55:38) 
-- CODE:
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    menorvalor = min(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 08:55:44) 
-- CODE:
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.170428
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1015/main.py", line 1, in <module>
    menorvalor = min(a,b,c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:56:03) 
-- CODE:
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    menorvalor = min(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 08:56:46) 
-- CODE:
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.154399
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1015/main.py", line 1, in <module>
    menorvalor = min(a,b,c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:56:49) 
-- CODE:
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    menorvalor = min(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:57:27) 
-- CODE:
a=6
b=7
c=8
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- OUTPUT:
6
7
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 08:57:30) 
-- CODE:
a=6
b=7
c=8
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.136667
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
6
7
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 08:58:20) 
-- CODE:
a=(6)
b=(7)
c=(8)
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.10576
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
6
7
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:58:21) 
-- CODE:
a=(6)
b=(7)
c=(8)
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- OUTPUT:
6
7
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 09:00:45) 
-- CODE:
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    menorvalor = min(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 09:11:19) 
-- CODE:
a = 6
b = 7
c = 9
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.132177
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
6
7
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 09:11:21) 
-- CODE:
a = 6
b = 7
c = 9
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- OUTPUT:
6
7
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 09:12:05) 
-- CODE:
a = 6
b = 7
c = 9
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.266522
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
6
7
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 09:12:08) 
-- CODE:
a = 6
b = 7
c = 9
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- OUTPUT:
6
7
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 09:13:37) 
-- CODE:
int(input(a = 6))
int(input(b = 7))
int(input(c = 9))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(a = 6))
TypeError: input() takes no keyword arguments
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 09:13:41) 
-- CODE:
int(input(a = 6))
int(input(b = 7))
int(input(c = 9))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.149832
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1015/main.py", line 1, in <module>
    int(input(a = 6))
TypeError: input() takes no keyword arguments

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 09:13:54) 
-- CODE:
int(input(a = 6))
int(input(b = 7))
int(input(c = 9))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(a = 6))
TypeError: input() takes no keyword arguments
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 09:14:15) 
-- CODE:
int(input(a = 6)
int(input(b = 7)
int(input(c = 9)
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- ERROR:
File "XXXX", line 2
    int(input(b = 7)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 09:14:49) 
-- CODE:
int(input(a == 6))
int(input(b == 7))
int(input(c == 9))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.179849
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1015/main.py", line 1, in <module>
    int(input(a == 6))
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 09:14:52) 
-- CODE:
int(input(a == 6))
int(input(b == 7))
int(input(c == 9))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(a == 6))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 09:15:37) 
-- CODE:
a=int(input(6))
b=int(input(7))
c=int(input(9))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- OUTPUT:
679-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 09:15:40) 
-- CODE:
a=int(input(6))
b=int(input(7))
c=int(input(9))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.15847
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
679-2
0
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 09:15:43) 
-- CODE:
a=int(input(6))
b=int(input(7))
c=int(input(9))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- OUTPUT:
679-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 09:16:21) 
-- CODE:
a=int(input(6))
b=int(input(7))
c=int(input(9))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = (a+b+c-menorvalor-maiorvalor)
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.148363
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
679-2
0
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 09:16:25) 
-- CODE:
a=int(input(6))
b=int(input(7))
c=int(input(9))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = (a+b+c-menorvalor-maiorvalor)
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- OUTPUT:
679-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 09:16:29) 
-- CODE:
a=int(input(6))
b=int(input(7))
c=int(input(9))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = (a+b+c-menorvalor-maiorvalor)
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.169966
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
679-2
0
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 09:17:12) 
-- CODE:
a=input('6')
b=input('7')
c=input('9')
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = (a+b+c-menorvalor-maiorvalor)
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    intermediario = (a+b+c-menorvalor-maiorvalor)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 09:17:15) 
-- CODE:
a=input('6')
b=input('7')
c=input('9')
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = (a+b+c-menorvalor-maiorvalor)
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.128796
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1015/main.py", line 6, in <module>
    intermediario = (a+b+c-menorvalor-maiorvalor)
TypeError: unsupported operand type(s) for -: 'str' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 09:25:18) 
-- CODE:
a=input=6
b=input=7
c=input=9
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = (a+b+c-menorvalor-maiorvalor)
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.155769
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
6
7
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 09:25:19) 
-- CODE:
a=input=6
b=input=7
c=input=9
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = (a+b+c-menorvalor-maiorvalor)
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- OUTPUT:
6
7
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 09:25:49) 
-- CODE:
a=input=6
b=input=7
c=input=9
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.131977
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
6
7
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 09:26:30) 
-- CODE:
a=int(input(6))
b=input=7
c=input=9
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- OUTPUT:
67
9
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 09:27:19) 
-- CODE:
a=int(input(6))
b=int(input(7))
c=int(input(9))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.147817
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
679-2
0
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:10:56) 
-- CODE:
a=int(input('6'))
b=int(input('7'))
c=int(input('9'))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.162923
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:05:52) 
-- CODE:
a=int(input('6'))
b=int(input('7'))
c=int(input('9'))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:06:20) 
-- CODE:
a=int(input('6'))
b=int(input('7'))
c=int(input('9'))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = a+b+c-menorvalor-maiorvalor
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:06:31) 
-- CODE:
a=int(input('6'))
b=int(input('7'))
c=int(input('9'))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = (a+b+c-menorvalor-maiorvalor)
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:06:34) 
-- CODE:
a=int(input('6'))
b=int(input('7'))
c=int(input('9'))
menorvalor = min(a,b,c)
maiorvalor = max(a,b,c)
intermediario = (a+b+c-menorvalor-maiorvalor)
print(menorvalor)
print(intermediario)
print(maiorvalor)
-- EXECUTION TIME:
0.120077
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
